<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".Activity.SplashScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">


        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimarydark"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageViewUpperSvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/forall"
                android:translationX="0dp"
                android:translationY="-70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_graphic_eq_orange_24dp"
                android:drawablePadding="10dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/margin_short"
                android:layout_marginBottom="@dimen/margin_short"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:background="@android:color/white"
                android:padding="@dimen/margin_default" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="20dp"
                android:src="@drawable/imagesplashscreen"/>





        </LinearLayout>
        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_short">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:gravity="center"
                android:padding="@dimen/margin_short"
                android:text="@string/join_community"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="18sp" />



        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>