<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/profile_pic_imageView"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:gravity="center_vertical"
                android:src="@drawable/defavatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="@drawable/rounded_fg"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@drawable/tv_edit_profile"
                android:text="@string/profile"
                android:fontFamily="@font/poppins_bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimarydark"
                android:textSize="25dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/profile_name_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_style"
                    android:drawableStart="@drawable/ic_baseline_account_circle_24"
                    android:drawablePadding="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/enter_your_full_name"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:padding="10dp"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/buttonEditName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/ic_baseline_create_24"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditName"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/profile_surname_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/et_style"
                    android:drawableStart="@drawable/ic_bio"
                    android:drawablePadding="15dp"
                    android:text="@string/bio"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:padding="10dp"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/buttonEditSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/ic_baseline_create_24"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditSurname"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/profile_phoneno_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/et_style"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="15dp"
                    android:text="@string/dies"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:padding="10dp"
                    android:textSize="17sp"/>
                <Button
                    android:id="@+id/buttonEditPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/ic_baseline_dialpad_24"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditPhoneNo"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewEmailAdress"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_style"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:text="@string/mail_address"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_light"
                    android:padding="10dp"
                    android:textSize="17sp"/>
            </TableRow>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_log_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_log_out"
                    android:padding="10dp"
                    android:text="@string/log_out"
                    android:onClick="navigateLogOut"
                    android:clickable="true"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/btn_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Settings"
                    android:clickable="true"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>