<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".Activity.ForgetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">

        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimarydark"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageViewUpperSvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/forall"
                android:translationX="0dp"
                android:translationY="-70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/margin_short"
                android:layout_marginBottom="@dimen/margin_short"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:background="@android:color/white"
                android:padding="@dimen/margin_default" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_short"
                android:orientation="horizontal"
                android:padding="@dimen/margin_short"
                android:weightSum="2">

                <Button
                    android:id="@+id/knowMore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_short"
                    android:layout_weight="1"
                    android:background="@drawable/cornered_button"
                    android:backgroundTint="@android:color/white"
                    android:text="Know more" />

                <Button
                    android:id="@+id/rememberPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_short"
                    android:layout_weight="1"
                    android:background="@drawable/cornered_button"
                    android:text="Got Pass?"
                    android:onClick="navigate_sign_in"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>
        <!-- Weight 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_short">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:background="@drawable/et_style"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgotPassEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"

                    android:background="@drawable/et_style"

                    android:inputType="textEmailAddress"
                    android:paddingBottom="16dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_short"
                    android:layout_weight="1"
                    android:background="@drawable/cornered_button"
                    android:text="Send Link"
                    android:gravity="center"
                    android:id="@+id/forgotPassButton"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"/>
    </LinearLayout>






</ScrollView>